# task-flow

./: .gitignore  pyproject.toml
.github/workflows/: cd_preprod.yml  cd_prod.yml  ci.yml
task_flow/: __init__.py  constants.py  setup_logger.py  step.py  task.py  task_manager.py
tests/: conftest.py  script.py  test_toto.py
tests/unit/: test_step.py  test_task.py  test_task_manager.py
