[tool.poetry]
name = "task-flow"
version = "0.1.0"
description = ""
authors = ["Gael <prungael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.4"
black = "^25.1.0"
flake8 = "^7.1.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "tests.script:run_tests"
